<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/fd5dd4e04b5a65807bac5c49ddd4c241" />

            <LinearLayout
                android:layout_width="309dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/user" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/times"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/three_dots_vertical_svgrepo_com"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_margin="5dp"
            android:text="@string/textview" />


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            app:srcCompat="@drawable/fd5dd4e04b5a65807bac5c49ddd4c241" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="5dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/like_svgrepo_com" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/likes"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="5dp"
                android:layout_height="17dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/comment_5_svgrepo_com" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="5dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/share_2_svgrepo_com" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />

            <Space
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="5dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/eye_svgrepo_com" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eye"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>